<resources>
    <string name="app_name">RSUD Ogan Ilir</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="dokter">Dokter</string>
    <string name="obat">Obat</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="kamar">Kamar</string>
    <string name="kontak">Kontak</string>
    <string name="tentang">Tentang</string>
    <string name="reservasi">Reservasi</string>
    <string name="jadwal_dokter">Jadwal Dokter</string>
    <string name="info_obat">Informasi Obat</string>
    <string name="info_kamar">Informasi Ketersediaan Kamar</string>
    <string name="registrasi_pasien">Reservasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="daftar_dokter_rsud_ogan_ilir">Daftar Dokter RSUD Ogan Ilir</string>
    <string name="masih_kosong">Masih Kosong</string>
    <string name="terisi">Terisi</string>
    <string name="kosong">Kosong</string>
    <string name="rsud_android_apps">RSUD Android Apps</string>
    <string name="version">Version 1.0</string>
    <string name="developed_by">Developed by</string>
    <string name="formaltech_solusindo">Formaltech Solusindo</string>
    <string name="rsud_kab_ogan_ilir">RSUD Kab. Ogan Ilir</string>
    <string name="profile_pic_rsud">Profile Pic RSUD</string>
    <string name="rumah_sakit_di_indonesia">Rumah Sakit di Indonesia</string>
    <string name="rating_reviews">Rating 4.4 dari 5.0 | 12 Reviews</string>
    <string name="buka_24_jam">Buka 24 Jam</string>
    <string name="phone_call">Phone Call</string>
    <string name="_0711_7583023">(0711) 7583023</string>
    <string name="_0812_7823_404">0812–7823–404</string>
    <string name="telepon_kantor1">Telepon Kantor</string>
    <string name="telepon_kantor2">Telepon Kantor</string>
    <string name="alamat_kantor">Alamat Kantor</string>
    <string name="alamat">Tanjung Sejaro, Indralaya,Ogan Ilir Regency, Sumatra Selatan, 30814</string>
    <string name="dokter_logo">Dokter Logo</string>
    <string name="obat_logo">Obat Logo</string>
    <string name="kamar_logo">Kamar Logo</string>
    <string name="registrasi_logo">Registrasi Logo</string>
    <string name="kontak_logo">Kontak Logo</string>
    <string name="tentang_logo">Tentang Logo</string>
    <string name="belum_tersedia">Menu Registrasi Belum Tersedia</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="poli">Poli</string>
    <string name="jam">Jam</string>
    <string name="foto_dokter">Foto Dokter</string>
    <string name="gambar_obat">Gambar Obat</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="satuan">Satuan :</string>
    <string name="stok">Stok :</string>
    <string name="gambar_ruangan">Gambar Ruangan</string>
    <string name="nama_kamar">Nama Kamar</string>
    <string name="tidak_ada_internet">Tidak Ada Internet</string>
    <string name="tidak_terhubung_ke_internet">Sepertinya perangkat kamu tidak terhubung ke Internet</string>
    <string name="reconnect">RECONNECT</string>
    <string name="no_internet_image">No Internet Image</string>
    <string name="pasien">Pasien</string>
    <string name="no_rekam_medik">No. Rekam Medik</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="tanggal_berobat">Tanggal Berobat</string>
    <string name="jam_berobat">Jam Berobat</string>
    <string name="submit">SUBMIT</string>
    <string name="tempat_parkir">Tempat Parkir</string>
    <string name="auditorium">Auditorium</string>
    <string name="mobil_ambulance">Mobil Ambulance</string>
    <string name="ruang_rawat_inap">Ruang Rawat Inap</string>
    <string name="point">:</string>
</resources>
