<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageDoctor"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/foto_dokter" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doctor_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_dokter"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doctor_poli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/poli"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/doctor_jam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jam"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
