<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgapps"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/oganilir"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="1dp" />


            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/profile_image"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/rsud_kab_ogan_ilir"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/subjudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/judul"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/profile_image"
                android:paddingBottom="12dp"
                android:text="@string/rumah_sakit_di_indonesia"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subjudul"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/rating_reviews"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="48dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/buka_24_jam"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/phone1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/phone_call"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phone_number1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@+id/phone1"
                android:paddingTop="12dp"
                android:paddingBottom="6dp"
                android:text="@string/_0711_7583023"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_phone_number1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number1"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@+id/phone1"
                android:text="@string/telepon_kantor1"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp">

            <ImageView
                android:id="@+id/phone2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phone_number2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@+id/phone2"
                android:paddingTop="12dp"
                android:paddingBottom="6dp"
                android:text="@string/_0812_7823_404"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc_phone_number2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number2"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@+id/phone2"
                android:text="@string/telepon_kantor2"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/location"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_toEndOf="@+id/location"
                android:paddingBottom="6dp"
                android:text="@string/alamat"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/desc_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_location"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@+id/location"
                android:text="@string/alamat_kantor"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>